<resources>
    <string name="app_name">Zodiak</string>
    <string name="nama">Nama</string>
    <string name="tulis_nama_anda">Tulis nama anda</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="submit">Submit</string>
    <string name="example">example</string>
    <string name="usia_anda_saat_ini_adalah">Usia anda saat ini adalah :</string>
    <string name="tahun">Tahun</string>
    <string name="bulan">Bulan</string>
    <string name="hari">Hari</string>
    <string name="bintang_anda_adalah">Bintang anda adalah :</string>
</resources>