<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/border_round_10_stroke_10"
                android:hint="@string/tulis_nama_anda"
                android:padding="5dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tanggal_lahir"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tgl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tgl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_round_10_stroke_10"
                android:padding="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <ImageView
                android:id="@+id/pick"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_round_calendar_month_24"
                app:layout_constraintBottom_toBottomOf="@+id/tgl"
                app:layout_constraintStart_toEndOf="@+id/tgl"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tgl"
                android:visibility="gone"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        android:visibility="gone">

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/usia_anda_saat_ini_adalah"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulan"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hari"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bintang_anda_adalah"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/zodiak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>